# lqr_test_matlab_control_toolbox

./: CMakeLists.txt  README.md
include/: lqr_ct.hpp  lqr_matlab.hpp
src/: ct_lqr.cpp  matlab_lqr.cpp  test_lqr.cpp
